--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -8,6 +8,8 @@
   <title>Leis de Newton</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
+  <script src="index.js"></script>
+
 </head>
 
 <body>
