--- a/Ondas.html
+++ b/Ondas.html
@@ -8,6 +8,8 @@
   <title>Ondas</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
+  <script src="index.js"></script>
+
 </head>
 
 <body>
@@ -15,132 +17,134 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
 
     </div>
-    
+
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
   </div>
   <div class="conteudo">
     <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
-    
+
     <br>
     <p class="margem">Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
       Definição de onda:
       <br>
+    </p>
+    <p class="margemC">
       “Segundo Rafael Helerbrock, ondas são perturbações que se deslocam no espaço transportando, exclusivamente,
       energia de um ponto a outro, sem realizar transporte de matéria."
     </p>
@@ -155,16 +159,19 @@
         Aqui</a>
     </legend>
     <br>
-    <p class="margem"> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância entre o começo
+    <p class="margem"> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância
+      entre o começo
       e o fim de uma onda é chamado período(T), representada pela parte em vermelho da figura 1, e também temos a
       amplitude(A), que é a “altura” da onda, ou seja, é a variação de altura em relação ao ponto inicial(linha do
       meio/tempo) (HELERBROCK, 2023).</p>
     <br>
-    <p class="margem"> Há mais uma propriedade chamada Frequência, que é medida em Hertz (Hz) e que nos diz de quanto em quanto tempo
+    <p class="margem"> Há mais uma propriedade chamada Frequência, que é medida em Hertz (Hz) e que nos diz de quanto em
+      quanto tempo
       uma crista/vale passa por um ponto, a fórmula para se calcular a Frequência é 1 ➗ T (Período) (HELERBROCK, 2023).
     </p>
     <br>
-    <p class="margem"> E tendo esses dados podemos dizer que tipo de onda é, pois cada tipo de onda tem Período, Amplitude etc
+    <p class="margem"> E tendo esses dados podemos dizer que tipo de onda é, pois cada tipo de onda tem Período,
+      Amplitude etc
       "específicas", e o meio que usamos para isso é medir a velocidade com que a onda se propaga com a fórmula
       Velocidade(V)= Comprimento da onda (que é a distância entre uma crista e outra, ou um vale e outro (HELERBROCK,
       2023). Geralmente medido em Metros(M) ) e a Frequência que é medida em Hertz (Hz) logo tendo a fórmula V= C x F
@@ -184,21 +191,42 @@
       agitá-la ela formará uma onda, irá até o ponto onde está presa e voltará a origem, assim como na figura 3.
     </p>
     <br>
-    <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais" style="margin-left: 150px;">
-    <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
-<br>
-<p class="margem">     Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional, bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características" próprias.(LOOS, 2023)</p>
-  </div>
-  <div id="caixa">
-    <h3>Tópicos em Ondas</h3>
+    <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais">
+    <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e
+        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
     <br>
-    <ul>
-      <li><a href=""><strong> Tipos de Ondas</strong></a></li>
-      <br>
-      <li><a href=""><strong> Fenômenos</strong></a> </li>
-    </ul>
+    <p class="margem"> Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional,
+      bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características"
+      próprias.(LOOS, 2023)</p>
+
+    <a href="Bibliografia.html"><button type="button" class="btn">
+        <strong>Tipos de Ondas</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+<br>
+<br>
+    <a href="Bibliografia.html"><button type="button" class="btn">
+        <strong>Fenomenos</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
+
   </div>
- 
+
+
   <div class="rodape"></div>
 
 </body>
