--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -169,8 +169,8 @@
       variados.(ALVES,2023)
     </p>
     <br>
-    <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite" width="600px"
-      style="margin-left: 110px;">
+    <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite"
+     >
     <legend style="text-align: center;"><a
         href="https://www.manualdaeletronica.com.br/o-que-e-corrente-eletrica-formulas-caracteristicas/">
         Imagem Dísponivel
