--- a/Dinamica.html
+++ b/Dinamica.html
@@ -144,7 +144,7 @@
       movimento.(HELERBROCK, 2023).</p>
     <br>
 
-    <img src="Imagens/tipos-de-forca.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/tipos-de-forca.webp" alt="Foto Satelite" >
     <legend style="text-align: center;"><a
         href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem
         Dísponivel
@@ -183,7 +183,7 @@
       forças é nula, ou seja, quando a soma vetorial de todas as forças aplicadas no corpo é igual a zero.(Nopes, 2023).
     </p>
     <br>
-    <img src="Imagens/Pedra.jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/Pedra.jpeg" alt="Foto Satelite">
     <legend style="text-align: center;"><a href="Imagens/Pedra.jpeg"> Imagem
         Dísponivel
         Aqui</a></legend>
