--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -167,7 +167,7 @@
     <p class="margem">
     </p>
     <br>
-    <img src="Imagens/OIG (1).jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/OIG (1).jpeg" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://www.bing.com/images/create/zeus--thunder/6445a481b46741e8889a08fc1d68ba2b?id=vKgb%2ffDZBHfGTVxRoNOc0Q%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&ajaxhist=0&ajaxserp=0">
         Imagem Dísponivel
