--- a/Energia.html
+++ b/Energia.html
@@ -160,8 +160,7 @@
       força."
     </blockquote><br>
     </p>
-    <img src="Imagens/energia.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
-    <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
+    <img src="Imagens/energia.webp" alt="Foto Satelite"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
         Imagem Dísponivel
         Aqui</a> </legend>
 
@@ -185,7 +184,7 @@
       um objeto na mesma posição, mas mais próximo ao solo.(Melo, 2023).
     </p>
     <br>
-    <img src="Imagens/montanharussa.jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/montanharussa.jpeg" alt="Foto Satelite" >
     <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/montanha-russa-vermelha-1208055/">
         Imagem Dísponivel
         Aqui</a> </legend>
@@ -202,7 +201,7 @@
       esse grau de agitação para todas as moléculas até que todas estejam na mesma frequência de agitação.(ANJOS, 2023)
     </p>
     <br>
-    <img src="Imagens/quente e frio  educador.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/quente e frio  educador.webp" alt="Foto Satelite" >
     <legend style="text-align: center;"><a href=" img src="Imagens/energia.webp" alt="Foto Satelite" width="600px"
         style="margin-left: 110px;">
         <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
@@ -217,7 +216,7 @@
     <br>
     <img
       src="Imagens/png-transparent-incandescent-light-bulb-graphy-lighting-bulb-light-photography-innovation-business-removebg-preview.png"
-      alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+      alt="Foto Satelite" >
     <legend style="text-align: center;"><a href="https://www.pngwing.com/pt/free-png-yeuqj">
         Imagem Dísponivel
         Aqui</a> </legend>
@@ -245,7 +244,7 @@
       que é transformada em calor e energia mecânica, por exemplo, para mover um carro ou gerar eletricidade em uma
       usina.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/1618504738242.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/1618504738242.png" alt="Foto Satelite" >
     <legend style="text-align: center;"><a href="https://megawhat.energy/verbetes/320/energia-quimica">
         Imagem Dísponivel
         Aqui</a> </legend>
@@ -259,7 +258,7 @@
     <p class="margem">Na fissão nuclear, um núcleo atômico pesado é dividido em dois núcleos menores, liberando uma grande quantidade
       de energia. Essa energia pode ser usada para gerar eletricidade em usinas nucleares.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/fissão-nuclear2-768x560.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/fissão-nuclear2-768x560.png" alt="Foto Satelite" >
     <legend style="text-align: center;"><a
         href="https://aprovatotal.com.br/fissao-e-fusao-nuclear-o-que-sao-diferencas-e-aplicacoes/">
         Imagem Dísponivel
@@ -270,7 +269,7 @@
     <p class="margem"> 
       A energia atômica é uma forma de energia não renovável, já que depende de fontes de urânio e outros elementos radioativos que são finitos na Terra. Além disso, o uso da energia nuclear tem implicações ambientais e de segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser perigosos por centenas de milhares de anos. (HELERBROCK, 2023).   </p>
     <br>
-    <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" alt="Foto Satelite" >
     <legend style="text-align: center;"><a href="https://www.todamateria.com.br/fusao-nuclear/">
         Imagem Dísponivel
         Aqui</a> </legend>
