--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -137,6 +137,7 @@
   </div>
   </div>
   <div class="conteudo">
+    
     <h1><strong class="textosTitulo"><em> Leis De Newton </em> </strong></h1>
     <br>
     <p class="margem">Você já ouviu falar no cara chamado Isaac Newton que certo dia caiu uma maçã na cabeça dele e ele propôs a Lei da
@@ -150,7 +151,7 @@
 
 
     <br>
-    <img src="Imagens/R (1).jpeg" alt="partes das ondas" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/R (1).jpeg" alt="partes das ondas" >
     <legend style="text-align: center;"><a href="http://fisica-marian3.blogspot.com/"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -177,7 +178,7 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/tirinha.jpg" alt="partes das ondas" width="800px">
+    <img src="Imagens/tirinha.jpg" alt="partes das ondas">
     <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -210,7 +211,7 @@
       também que algo pesado acelera mais que algo leve (HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" style="margin-left: 50px;">
+    <img src="Imagens/segunda lei.webp" alt="Longitudinais e Transversais" >
     <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/segunda-lei-newton.htm"> Ondas. Conceito,
         natureza e
         tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
@@ -234,7 +235,7 @@
       <br>
     </p>
     <br>
-    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais" style="margin-left: 10px;">
+    <img src="Imagens/terceiralei.webp" alt="Longitudinais e Transversais">
     <legend>Disponivel em:<a href="https://brasilescola.uol.com.br/fisica/terceira-lei-newton.htm"> Ondas. Conceito,
         natureza e
         tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
