--- a/Mecanica.html
+++ b/Mecanica.html
@@ -8,6 +8,8 @@
   <title>Mecânica</title>
   <link href="ProjetoIntegrador.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="Imagens/OIG__2_-removebg-preview.png">
+  <script src="index.js"></script>
+
 </head>
 
 <body>
@@ -164,8 +166,7 @@
       força.(HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/mecanicafoto1.jpeg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
-    <legend style="text-align: center;"><a
+    <img src="Imagens/mecanicafoto1.jpeg" alt="Foto Satelite" ><a
         href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem Dísponivel
         Aqui</a>
     </legend>
@@ -252,10 +253,6 @@
     <br>
 
 
-    <br>
-  </div>
-
-  <div id="caixa">
     <h3>Tópicos em Mecanica</h3>
     <br>
     <a href="Bibliografia.html"><button type="button" class="btn">
@@ -269,7 +266,7 @@
         <div class="circle"></div>
       </div>
     </button></a>
-    
+    <br>
     <a href="Bibliografia.html"><button type="button" class="btn">
       <strong>Dinamica</strong>
       <div id="container-stars">
@@ -282,6 +279,10 @@
       </div>
     </button></a>
   </div>
+    <br>
+  </div>
+
+
 
 
 
