--- a/Optica.html
+++ b/Optica.html
@@ -144,7 +144,7 @@
 <br>
       <br>
     </p>
-    <img src="Imagens/optica1.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/optica1.png" alt="Foto Satelite" >
     <legend style="text-align: center;"><a href="https://mundoeducacao.uol.com.br/fisica/optica-geometrica.html">
         Imagem Dísponivel
         Aqui</a>
@@ -193,7 +193,7 @@
     <br>
     <p class="margem">Princípio da propagação retilínea da luz: Os raios de luz avançam em um caminho reto.</p>
     <br>
-    <img src="Imagens/optica2.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/optica2.png" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/16/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
@@ -202,7 +202,7 @@
     <br>
     <p class="margem">Princípio da independência dos raios de luz: Dois raios de luz se cruzam como se não existissem um em relação ao
       outro (DEON, 2023).</p>
-    <img src="Imagens/optica3.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/optica3.png" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/28/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
@@ -212,7 +212,7 @@
     <p class="margem">Princípio da reversibilidade dos raios de luz: Feixes de luz podem se mover em qualquer direção enquanto viajam
       pelo espaço (DEON, 2023).</p>
     <br>
-    <img src="Imagens/optica4.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+    <img src="Imagens/optica4.png" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://slideplayer.com.br/slide/363434/2/images/27/Princ%C3%ADpios+da+%C3%93ptica+Geom%C3%A9trica.jpg">
         Imagem Dísponivel
@@ -258,7 +258,7 @@
 <p class="margem">
   A penumbra, por sua vez, é parcialmente iluminada pela luz e está localizada na região de transição entre sombra e luz. As penumbras são produzidas quando objetos opacos são iluminados por fontes de luz estendidas. Se você deseja obter uma compreensão mais profunda de como essas influências são formadas (GOETHE, 2023).</p>
   <br>
-  <img src="Imagens/optica5.png" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+  <img src="Imagens/optica5.png" alt="Foto Satelite" >
   <legend style="text-align: center;"><a href="https://slideplayer.com.br/slide/17276642/100/images/26/O+que+s%C3%A3o+sistemas+%C3%B3pticos.jpg">
       Imagem Dísponivel
       Aqui</a>
