--- a/MecanicaRe.html
+++ b/MecanicaRe.html
@@ -169,8 +169,7 @@
         </p>
         <p class="margem"> c²= velocidade da luz no vácuo.</p>
         <br>
-        <img src="Imagens/fotorelatividade.jpg" alt="Forças" width="800px">
-        <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/papel-de-parede-de-galaxia-cinza-e-preto-2150/"> Imagem Dísponivel
+        <img src="Imagens/fotorelatividade.jpg" alt="Forças"><a href="https://www.pexels.com/pt-br/foto/papel-de-parede-de-galaxia-cinza-e-preto-2150/"> Imagem Dísponivel
             Aqui</a>
         </legend>
         <br>
@@ -184,7 +183,7 @@
         movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
         2023).</p>
   <br>
-      <img src="Imagens/fotomecanica2.webp" alt="Forças" width="800px">
+      <img src="Imagens/fotomecanica2.webp" alt="Forças" >
       <legend style="text-align: center;"><a href="https://brainly.com.br/tarefa/18695505"> Imagem Dísponivel
           Aqui</a>
       </legend>
