--- a/Dinamica.html
+++ b/Dinamica.html
@@ -143,12 +143,13 @@
       movimento.Essas leis são descritas pelas três leis de Newton, também conhecidas como as leis do
       movimento.(HELERBROCK, 2023).</p>
     <br>
-
-    <img src="Imagens/tipos-de-forca.webp" alt="Foto Satelite" >
-    <legend style="text-align: center;"><a
-        href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem
-        Dísponivel
-        Aqui</a></legend>
+    <div id="center">
+      <img src="Imagens/tipos-de-forca.webp" alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem
+          Dísponivel
+          Aqui</a></legend>
+    </div>
     <br>
 
     <p class="margem">Segundo Pedro Loos(2022), a primeira lei de Newton, também chamada de lei da inércia, diz que um
@@ -171,10 +172,12 @@
     <p class="margem"> A dinâmica também é importante na engenharia, sendo utilizada no projeto de máquinas, veículos e
       estruturas.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/flight-sky-earth-space.jpg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
-    <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/foguete-branco-2159/"> Imagem
-        Dísponivel
-        Aqui</a></legend>
+    <div id="center">
+      <img src="Imagens/flight-sky-earth-space.jpg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
+      <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/foguete-branco-2159/"> Imagem
+          Dísponivel
+          Aqui</a></legend>
+    </div>
     <br>
     <h1><strong class="textosTitulo"><em> Estatica </em> </strong></h1>
     <p class="margem">De acordo com Prof. Eduardo Nobre Lages, A estática é o ramo da física que estuda o equilíbrio de
@@ -183,10 +186,12 @@
       forças é nula, ou seja, quando a soma vetorial de todas as forças aplicadas no corpo é igual a zero.(Nopes, 2023).
     </p>
     <br>
-    <img src="Imagens/Pedra.jpeg" alt="Foto Satelite">
-    <legend style="text-align: center;"><a href="Imagens/Pedra.jpeg"> Imagem
-        Dísponivel
-        Aqui</a></legend>
+    <div id="center">
+      <img src="Imagens/Pedra.jpeg" alt="Foto Satelite">
+      <legend style="text-align: center;"><a href="Imagens/Pedra.jpeg"> Imagem
+          Dísponivel
+          Aqui</a></legend>
+    </div>
   </div>
 
 
