--- a/Mecanica.html
+++ b/Mecanica.html
@@ -137,7 +137,9 @@
   </div>
   </div>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
+    </div>
     <br>
     <p class="margem">
       “Segundo Rafael Helerbrock : Mecânica é
@@ -157,8 +159,10 @@
     </p>
 
     <br>
-    <h3><strong class="textosTitulo">O que ela Estuda?
-      </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo">O que ela Estuda?
+        </strong></h3>
+    </div>
     <br>
     <p class="margem">
       A mecânica é um ramo da física que estuda o movimento e o comportamento dos objetos sob a influência da força, ou
@@ -166,14 +170,15 @@
       força.(HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/mecanicafoto1.jpeg" alt="Foto Satelite" ><a
-        href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem Dísponivel
-        Aqui</a>
+    <img src="Imagens/mecanicafoto1.jpeg" width="100%" alt="Foto Satelite"><a
+      href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem Dísponivel
+      Aqui</a>
     </legend>
     <br>
-    <h3><strong class="textosTitulo">Mecânica Clássica
-
-      </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo">Mecânica Clássica
+        </strong></h3>
+    </div>
     <br>
     <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
       Inércia.
@@ -201,38 +206,46 @@
     <br>
 
     <br>
-    <h3><strong class="textosTitulo">Movimento Retilíneo Uniforme (MRU) </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo">Movimento Retilíneo Uniforme (MRU) </strong></h3>
+    </div>
     <br>
     <p class="margem">
       Segundo o Prof. Augusto Melo(2023), o movimento uniforme é um tipo de movimento em que um objeto percorre
       distâncias iguais em intervalos de tempo iguais, mantendo a mesma velocidade. Sendo assim a velocidade permanece
       constante e invariável por todo trajeto além de sua trajetória ser uma reta.
       A equação que descreve o movimento é:
-
-    <h3 style="margin-left: 200px;"> <strong class="textosTitulo">S = s0 + V * t</strong> </h3>
+      <br>
+      <br>
+    <div id="center">
+      <h3> <strong class="textosTitulo">S = s0 + V * t</strong> </h3>
+    </div>
+    <br>
     <p class="margem"> S =é a posição final do objeto em relação a um ponto de referência.</p>
     <p class="margem"> s0=é a posição inicial do objeto em relação ao mesmo ponto de referência
     </p>
     <p class="margem"> V= é a velocidade constante do objeto.</p>
     <p class="margem"> t = é o tempo em que o objeto levou para percorrer a trajetória.</p>
-
-
     <br>
-
-
-    <h3><strong class="textosTitulo">Movimento Retilíneo Uniformemente Variado (MRUV) </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo">Movimento Retilíneo Uniformemente Variado (MRUV) </strong></h3>
+    </div>
     <p class="margem"> um tipo de movimento em que a velocidade de um objeto varia uniformemente ao longo do tempo, sob
       a ação de uma
       aceleração constante, ou seja, a velocidade aumenta ou diminui, contudo a aceleração permanece a mesma.(MARTINS,
       2023) .
       A equação da cinemática que descreve o movimento uniformemente variado é dada por:
-
-    <p class="margem"> <strong class="textosTitulo"> S = S0 + V0*t + (1/2)at^2</strong></p>
+      <br>
+    <div id="center">
+      <p class="margem"> <strong class="textosTitulo"> S = S0 + V0*t + (1/2)at^2</strong></p>
+    </div>
     <hr>
     <br>
-    <h3><strong class="textosTitulo"> Movimento Circular Uniforme (MCU)
+    <div id="center">
+      <h3><strong class="textosTitulo"> Movimento Circular Uniforme (MCU)
 
-      </strong></h3>
+        </strong></h3>
+    </div>
     <br>
     <p class="margem"> No vídeo Movimento Circular Uniforme - Aula 01 do canal
       Davi Oliveira - Física 2.0, é apresentado que o movimento circular uniforme é um tipo de movimento em que um
@@ -255,31 +268,31 @@
 
     <h3>Tópicos em Mecanica</h3>
     <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Mecanica Relativista</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
-    
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
+    <a href="MecanicaRe.html"><button type="button" class="btn">
+        <strong>Mecanica Relativista</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
     <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Dinamica</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
-    
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
+    <a href="Dinamica.html"><button type="button" class="btn">
+        <strong>Dinamica</strong>
+        <div id="container-stars">
+          <div id="stars"></div>
+        </div>
+
+        <div id="glow">
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </button></a>
   </div>
-    <br>
+  <br>
   </div>
 
 
