--- a/Ondas.html
+++ b/Ondas.html
@@ -137,16 +137,19 @@
   </div>
   </div>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
-
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Fenômenos Ondulatórios </em> </strong></h1>
+    </div>
     <br>
     <p class="margem">Nesta página será abordado conteúdo sobre Fenômenos Ondulatórios, Ondas, Tipos de Ondas e etc.
       Definição de onda:
       <br>
     </p>
     <p class="margemC">
+    <blockquote>
       “Segundo Rafael Helerbrock, ondas são perturbações que se deslocam no espaço transportando, exclusivamente,
       energia de um ponto a outro, sem realizar transporte de matéria."
+    </blockquote>
     </p>
     <br>
     <p class="margem">
@@ -154,10 +157,12 @@
     </p>
 
     <br>
-    <img src="Imagens/ondapartes.png" alt="partes das ondas" width="800px">
-    <legend style="text-align: center;"><a href="https://www.youtube.com/watch?v=M2D5-zXlD6A"> Imagem Dísponivel
-        Aqui</a>
-    </legend>
+    <div id="center">
+      <img src="Imagens/ondapartes.png" alt="partes das ondas" width="800px">
+      <legend style="text-align: center;"><a href="https://www.youtube.com/watch?v=M2D5-zXlD6A"> Imagem Dísponivel
+          Aqui</a>
+      </legend>
+    </div>
     <br>
     <p class="margem"> Os pontos mais altos são chamados de cristas, e os mais baixos são chamados de vales, a distância
       entre o começo
@@ -176,12 +181,16 @@
       Velocidade(V)= Comprimento da onda (que é a distância entre uma crista e outra, ou um vale e outro (HELERBROCK,
       2023). Geralmente medido em Metros(M) ) e a Frequência que é medida em Hertz (Hz) logo tendo a fórmula V= C x F
       assim como mostrado na Figura 2. Ou também pode aparecer desse jeito segundo HELERBROCK, Rafael.</p>
-    v = velocidade de propagação da onda (m/s)
-    λ = comprimento de onda (m)
-    f = frequência (Hz ou s-1)
+    <p class="margem">v = velocidade de propagação da onda (m/s)</p>
+    <p class="margem"> λ = comprimento de onda (m)
+    </p>
+    <p class="margem"> f = frequência (Hz ou s-1)
+    </p>
     </p>
     <br>
-    <h3><strong class="textosTitulo"> Longitudinais e Transversais </strong></h3>
+    <div id="center">
+      <h3><strong class="textosTitulo"> Longitudinais e Transversais </strong></h3>
+    </div>
     <br>
     <p class="margem">
       Segundo Frederico Borges de Almeida as ondas Longitudinais são ondas que podem se mover em qualquer direção, onde
@@ -191,9 +200,11 @@
       agitá-la ela formará uma onda, irá até o ponto onde está presa e voltará a origem, assim como na figura 3.
     </p>
     <br>
-    <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais">
-    <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e
-        tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
+    <div id="center">
+      <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais">
+      <legend>Disponivel em:<a href="https://mundoeducacao.uol.com.br/fisica/ondas-2.htm"> Ondas. Conceito, natureza e
+          tipos de ondas - Mundo Educação (uol.com.br)</a></legend>
+    </div>
     <br>
     <p class="margem"> Algo que também é legal destacar são que ondas podem se propagar de forma unidimensional,
       bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características"
@@ -210,8 +221,8 @@
           <div class="circle"></div>
         </div>
       </button></a>
-<br>
-<br>
+    <br>
+    <br>
     <a href="Bibliografia.html"><button type="button" class="btn">
         <strong>Fenomenos</strong>
         <div id="container-stars">
