--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -17,127 +17,129 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
 
     </div>
-    
+
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
   </div>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Correntes Elétricas </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Correntes Elétricas </em> </strong></h1>
+    </div>
     <br>
     <p>
     <blockquote>“A corrente elétrica designa o movimento ordenado de cargas elétricas, partículas eletrizadas chamadas
@@ -162,30 +164,37 @@
       movimento dos elétrons, e a corrente elétrica convencional que tem sentido contrário ao movimento dos elétrons e
       tem destaque pelo movimento das cargas elétricas positivas.(GOUVEIA,2023)</p>
     <br>
-    <p class="margem">Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua (CC) e corrente
+    <p class="margem">Além do sentido, as correntes elétricas também podem ser classificadas entre corrente contínua
+      (CC) e corrente
       alternada (CA). A corrente contínua é gerada por pilhas e baterias, apresenta diferença de potencial (ddp)
       contínua, além disso, possui sentido e intensidade constantes. A corrente alternada é gerada pelas usinas de
       energia elétrica, apresenta diferença de potencial(ddp) alternada, com o sentido e intensidade
       variados.(ALVES,2023)
     </p>
     <br>
-    <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite"
-     >
-    <legend style="text-align: center;"><a
-        href="https://www.manualdaeletronica.com.br/o-que-e-corrente-eletrica-formulas-caracteristicas/">
-        Imagem Dísponivel
-        Aqui</a>
-    </legend>
+    <div id="center">
+      <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite">
+      <legend style="text-align: center;"><a
+          href="https://www.manualdaeletronica.com.br/o-que-e-corrente-eletrica-formulas-caracteristicas/">
+          Imagem Dísponivel
+          Aqui</a>
+      </legend>
+    </div>
     <br>
-    <p class="margem">A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de dois pontos de um condutor, de
+    <p class="margem">A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de dois pontos de um
+      condutor, de
       acordo com o Sistema Internacional de medidas (SI) ela é medida em Volts (V) e pode ser calculada pela fórmula:
       U=R.I, ou seja, o inverso da resistência elétrica.(ALVES,2023)</p>
     <br>
-    <p class="margem">A intensidade de uma corrente elétrica refere-se à quantidade de carga elétrica que atravessa um condutor durante
+    <p class="margem">A intensidade de uma corrente elétrica refere-se à quantidade de carga elétrica que atravessa um
+      condutor durante
       um determinado período de tempo, no (SI) a intensidade é medida em Ampère (A), a intensidade pode ser calculada
       através da fórmula:</p>
-    <img src="Imagens/formula.png" alt="formula">
+    <div id="center">
+      <img src="Imagens/formula.png" alt="formula">
+    </div>
     <br>
+
     <p class="margem">Onde,
 
     </p>
@@ -212,7 +221,7 @@
     <p class="margem"> ∆t: variação do tempo (h)
     </p>
   </div>
-  
+
   <div class="rodape"></div>
 
 </body>
