--- a/index.html
+++ b/index.html
@@ -17,131 +17,131 @@
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
-  <a href="sambaqui.html"><button type="button" class="btn">
-    <strong>Sambaqui</strong>
-    <div id="container-stars">
-      <div id="stars"></div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="sambaqui.html"><button type="button" class="btn">
+          <strong>Sambaqui</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
     </div>
 
-    <div id="glow">
-      <div class="circle"></div>
-      <div class="circle"></div>
-    </div>
-  </button></a>
-    </div>
-    
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
@@ -149,19 +149,40 @@
   <div class="conteudo">
     <h1 style="text-align: center;"><strong class="textosTitulo"><em> Conteúdo </em> </strong></h1>
     <br>
-    <p class="margem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non aut amet beatae eos sapiente distinctio
-      praesentium, tempora aperiam minima consectetur, nam dignissimos atque? Reiciendis labore quis illum dignissimos,
-      omnis impedit.</p>
-    <p class="margem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit officia veniam quasi commodi in, accusantium
-      autem optio, cumque consectetur rem mollitia consequuntur excepturi, praesentium ut voluptatum nostrum.
-      Blanditiis, itaque enim.</p>
-    <p class="margem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque praesentium rem corrupti autem, eos, tempora,
-      vel nesciunt similique iure provident sit iusto? Aliquam, consequatur recusandae maxime reprehenderit molestias
-      earum est.</p>
+    <p class="margem">Olá, este site, Física na Mente, é, foi, esta sendo feito por Anthony Gabriel, Claudio Anzini,
+      Pedro Malaquias e Gustavo Kruger.</p>
+      <br>
+      <div id="center">
+<br>
+        <br>
+    <p class="margem">Biografia do Anthony</p>
+    <br>
+    <img src="Imagens/Anthony.gif" width="50%" alt="Foto do Anthony">
+    <br>
+      </div>
+      <div id="center">  
+    <p class="margem">Biografia do Claudio</p>
+    <br>
+  
+      <img src="Imagens/Claudio.png" width="50%" alt="Foto do Claudio">
+    </div>
+    <br>
+    <div id="center">
+      <p class="margem">Biografia do Pedro</p>
+      <br>
+    </div>
+    <div id="center">
+      <img src="Imagens/pedro.gif" width="50%" alt="Foto do Pedro">
+      <br>
+    </div>
+    <div id="center">
+      <p class="margem">Biografia do Gustavo</p>
+      <img src="" alt="Foto do Gustavo">
+    </div>
   </div>
 
 
-  
+
   <div class="rodape"></div>
 
 </body>
